option java_package = "com.mogujie.jarvis.protocol";
option java_outer_classname = "ApplicationProtos";


message RestServerCreateApplicationRequest {
    required string app_name = 1;
    optional int32 status = 2 [default = 1];
    required string user = 3;
    optional int32 max_concurrency = 4 [default = 10];
}


message ServerCreateApplicationResponse {
    required bool success = 1;
    optional string message = 2 [default = ""];
    required string app_key = 3;
}


message RestServerModifyApplicationRequest {
    required int32 app_id = 1;
    optional string app_name = 2;
    optional int32 status = 3;
    optional int32 max_concurrency = 4;
    required string user = 5;
}


message ServerModifyApplicationResponse {
    required bool success = 1;
    optional string message = 2 [default = ""];
}